# Wifi-deauth-detector

./: README.md  pyproject.toml
tests/: test_analyzer.py
wifi_deauth_detector/: __init__.py  analyzer.py
